# flamefall

./: .editorconfig  .gitignore  CMakeLists.txt
base/Models/: Cliff.blend
base/Shaders/: ColorFragmentShader.frag  StandardShading.frag  StandardShading.vert  TransformVertexShader.vert
src/: buffer.cpp  buffer.h  context_wrappers.cpp  context_wrappers.h  main.cpp  resources.cpp  resources.h  scene.cpp  scene.h  shader.cpp  shader.h  uniform.cpp  uniform.h
